Prevent the project article in ProjectTab being overlapped by the header when user click on 'Projects' link on the header

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,6 +1,6 @@
 .project {
   color: white;
-  min-height: 100vh;
+  min-height: calc(100vh - 4.5rem + 2px);
   padding: 10%;
   display: flex;
   flex-direction: column;
@@ -28,6 +28,7 @@
 
 @media only screen and (min-width: 700px) {
   .project {
+    min-height: 100vh;
     padding: 4rem 1.2rem;
     padding-right: calc(1.2rem + 2.5rem);
   }
